fix: Read Only field UI broken in desk form and Web form

--- a/frappe/public/scss/common/css_variables.scss
+++ b/frappe/public/scss/common/css_variables.scss
@@ -1,4 +1,5 @@
 $primary: #6195ff !default;
+$input-height: 28px !default;
 
 :root,
 [data-theme="light"] {
@@ -283,6 +284,10 @@ $primary: #6195ff !default;
 
 	--primary-color: #{$primary};
 	--btn-height: 30px;
+
+	// input
+	--input-height: #{$input-height};
+	--input-disabled-bg: var(--gray-200);
 
 	// Checkbox
 	--checkbox-right-margin: var(--margin-xs);
