--- a/frappe/public/scss/common/form.scss
+++ b/frappe/public/scss/common/form.scss
@@ -23,6 +23,7 @@
 		font-weight: normal;
 		font-size: var(--text-sm);
 	}
+	min-height: var(--input-height);
 	margin-bottom: 7px;
 	border-radius: $border-radius;
 	font-weight: 400;
